# sopmoe

./: .gitignore  README.md  crypto_list.txt  forex_list.txt  pyproject.toml  requirements.txt  run.py  stocks_list.txt
data/index/: faiss.index  metadata.db
results/: performance_summary.csv  table_3_fixed_experts.csv  table_4_switching.csv  table_5_uncertainty_ablation.csv  table_6_component_ablation.csv
results/BTC_USD/: summary.csv
results/BTC_USD/a2c/: metrics.json
results/BTC_USD/ddpg/: metrics.json
results/BTC_USD/ppo/: metrics.json
results/BTC_USD/sac/: metrics.json
results/ETH_USD/: summary.csv
results/ETH_USD/a2c/: metrics.json
results/ETH_USD/ddpg/: metrics.json
results/experiments/: summary.csv  summary_statistics.csv
scripts/: download_data.py  run_backtest.py  run_experiments.py  run_expert_backtest.py  run_indexing.py  run_inference.py  train_experts.py  visualize_raw_data.py
src/: __init__.py
src/backtest/: __init__.py  engine.py  metrics.py  plotting.py
src/config/: config.yaml
src/data/: __init__.py  downloader.py  features.py  loader.py  state_builder.py
src/embedding/: __init__.py  train_vae.py  utils.py  vae.py
src/experts/: __init__.py  alpha_mix_rl.py  base.py  finrl_expert.py  milp_expert.py  registry.py  tac_expert.py  train.py
src/indexing/: database.py  engine.py  prompts.py
src/inference/: __init__.py  engine.py  prompts.py  utils.py
src/utils/: __init__.py  helpers.py  logging.py
tests/: test_backtest.py  test_data_pipeline.py  test_experts.py  test_indexing.py  test_inference.py  test_vae.py
(+21 files in other folders)
