[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-aware-portfolio"
version = "0.1.0"
description = "Regime-Aware Portfolio Management via Retrieval-Augmented LLM-Guided Expert Switching"
requires-python = ">=3.9"
dependencies = [
    "torch>=1.13",
    "numpy>=1.21",
    "pandas>=1.4",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "finrl>=1.0.1",
    "gym>=0.21",
    "stable-baselines3>=1.6",
    "faiss-cpu>=1.7",
    "litellm>=0.1.7",
    "hydra-core>=1.3",
    "sqlalchemy>=2.0",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "tqdm>=4.64",
    "omegaconf>=2.3",
]

[tool.setuptools.packages.find]
include = ["src", "src.*"]
